--- a/bidlinks.html
+++ b/bidlinks.html
@@ -16,7 +16,7 @@
         for (let i = 1; i <= 20; i++) {
             const button = document.createElement('a');
             button.href = `https://gtacaus.github.io/tickmeta/barcode${i}.txt`;
-            button.textContent = `BID ${i}`;
+            button.textContent = `SID ${i}`;
             button.style.display = 'block';
             button.style.margin = '5px 0';
             button.style.padding = '10px';
